Fix video and image responsiveness - #17 (#22)
* Moved fitvids to end of page to prevent attaching to wrong jQuery - #17

* Fix images overflowing the page - #17

--- a/static/css/paragraph.less
+++ b/static/css/paragraph.less
@@ -115,3 +115,8 @@
     margin: 20px 20%;
   }
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
